[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssl-mgr"
dynamic = ["version"]
description = "ssl-mgr : Manage (re)new certificates and handle DANE TLSA key rollover"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/ssl_mgr"]
include = [
    "src/ssl_mgr",
]

[project.urls]
Documentation = "https://github.com/gene-git/ssl-mgr/Docs"
Issues = "https://github.com/gene-git/ssl-mgr/issues"
Source = "https://github.com/gene-git/ssl-mgr"

[tool.hatch.version]
path = "src/ssl_mgr/config/version.py"

[tool.hatch.envs.default]

[tool.hatch.envs.default.scripts]

[[tool.hatch.envs.all.matrix]]
python = ["3.13", "3.14", "3.15"]

[tool.hatch.envs.lint]
detached = true

[tool.mypy]
check_untyped_defs = true


