[build-system]
requires = ["uv_build>=0.9.21,<=1.0.0"]
build-backend = "uv_build"

[project]
name = "ssl-mgr"
description = "ssl-mgr : Manage (re)new certificates (also DANE TLSA key rollover)"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
requires-python = ">=3.13"
version="7.2.0"
dependencies = []

[project.urls]
Documentation = "https://github.com/gene-git/ssl-mgr/Docs"
Issues = "https://github.com/gene-git/ssl-mgr/issues"
Source = "https://github.com/gene-git/ssl-mgr"

[tool.uv.build-backend]
module-name = 'ssl_mgr'
module-root = "src"
source-include = [
    '/ssl_mgr',
    '/ssl_mgr/py.typed',
]
source-exclude = [
    ".pytest_cache",
    "__pycache__",
    ".mypy_cache",
]

[tool.mypy]
check_untyped_defs = true
follow_untyped_imports = true
#mypy_path = "src/types_stubs"
